# PooleOS

./: .gitattributes  .gitignore  LICENSE  NOTICE.md  README.md  SECURITY.md  TRADEMARKS.md
.github/: CODEOWNERS
docs/: adr-ratification-ceremony.md  boot-log-contract.md  boot-readiness-checklist.md  boot-trap-bundle-manifest.md  buildroot-acquisition-checklist.md  capability-trap-fuzz.md  capability-trap-proof.md  hardware-target-and-lab-safety.md  kernel-boot-handoff.md  kernel-pgvm2-loader-evidence.md  kernel-pgvm2-loader-output.md  kernel-pgvm2-loader-transcript-verifier.md  lab-guest-autostart.md  lab-kernel-transcript-emitter-contract.md  lab-kernel-transcript-export-receipt.md  lab-os-decision.md  microkernel-isolation-spike.md  n0-owner-decision-packet.md  n0-owner-response-receipt.md  native-boot-config.md  native-boot-exit.md  native-boot-handoff.md  native-boot-trust.md  native-elf-loader.md  native-firmware-manifest.md  native-formal-models.md  native-initial-system-bundle.md  native-initial-system-profile.md  native-kernel-cpu-policy.md  native-kernel-entry.md  native-kernel-errata-policy.md  native-kernel-load.md  native-kernel-map.md  native-kernel-physical-memory.md  native-kernel-privilege-msr-policy.md  native-kernel-revalidation.md  native-kernel-transfer.md  native-kernel-trap.md  native-kernel-virtual-memory.md  native-kernel-xstate-exception.md  (+32 more)
native/: Cargo.toml  README.md  rust-toolchain.toml
native/.cargo/: config.toml
native/abi/: README.md
native/artifact/: Cargo.toml
native/artifact/src/: lib.rs
native/boot/: Cargo.toml  README.md
native/boot/src/: exit.rs  kload.rs  kmap.rs  lib.rs  livehandoff.rs  main.rs
native/bootcfg/: Cargo.toml  README.md
native/bootcfg/src/: lib.rs
native/bootexit/: Cargo.toml  README.md
native/bootexit/src/: lib.rs
native/bootload/: Cargo.toml  README.md
native/bootload/src/: lib.rs
native/cpupolicy/: Cargo.toml
native/cpupolicy/src/: lib.rs
native/drivers/: README.md
native/elf/: Cargo.toml  README.md
native/elf/src/: lib.rs
native/firmware/: Cargo.toml
native/firmware/src/: lib.rs
native/fixtures/pooleboot/: Cargo.toml
native/fixtures/pooleboot/src/: main.rs
native/fixtures/poolekernel/: Cargo.toml  README.md
native/fixtures/poolekernel/src/: main.rs
native/handoff/: Cargo.toml  README.md
native/handoff/src/: lib.rs
native/image/: README.md
native/initsys/: Cargo.toml
native/initsys/src/: lib.rs
native/inner/: Cargo.toml
native/inner/src/: lib.rs
native/kernel/: Cargo.toml  README.md  linker.ld  manifest.pkm
native/kernel/arch/x86_64/: README.md
native/kernel/src/: active_virtual_memory.rs  lib.rs  main.rs  physical_memory.rs  privilege_msr.rs  revalidation.rs  virtual_memory.rs  xstate.rs  xstate_exception.rs
native/kernel/src/arch/: x86_64.rs
native/kmap/: Cargo.toml  README.md
native/kmap/src/: lib.rs
native/livehandoff/: Cargo.toml
native/livehandoff/src/: lib.rs
native/manifest/: Cargo.toml  README.md
native/manifest/src/: lib.rs
native/microcode/: Cargo.toml
native/microcode/src/: lib.rs
native/pdc/: README.md
native/policy/: Cargo.toml
native/policy/src/: lib.rs
native/pooleglyph/: README.md
native/recovery/: Cargo.toml  README.md
native/recovery/src/: lib.rs
native/runtime/: README.md
native/security/: README.md
native/symbols/: Cargo.toml
native/symbols/src/: lib.rs
native/system/: README.md
native/tests/: README.md
native/trust/: Cargo.toml
native/trust/src/: backend.rs  lib.rs
native/ui/: README.md
runs/: adr_ratification_readiness.json  hardware_target_readiness.json  n0_owner_decision_packet.json  n0_owner_response_receipt.json  native-kernel-cpu-policy-readiness.json  native-kernel-errata-policy-readiness.json  native-kernel-physical-memory-readiness.json  native-kernel-privilege-msr-policy-readiness.json  native-kernel-revalidation-readiness.json  native-kernel-transfer-readiness.json  native-kernel-trap-readiness.json  native-kernel-xstate-exception-readiness.json  native-kernel-xstate-policy-readiness.json  native_architecture_baseline.json  native_boot_config_readiness.json  native_boot_handoff_readiness.json  native_boot_trust_readiness.json  native_elf_loader_readiness.json  native_firmware_readiness.json  native_initial_system_readiness.json  native_kernel_entry_readiness.json  native_kernel_load_readiness.json  native_microcode_readiness.json  native_model_readiness.json  native_policy_readiness.json  native_pooleboot_readiness.json  native_recovery_readiness.json  native_symbol_readiness.json  native_system_manifest_readiness.json  native_tier0_readiness.json  native_toolchain_qualification.json  native_v1_objectives_readiness.json  pdc_production_roadmap.json  pooleos_native_checklist_coverage.json  tier1_hardware_observation.json
runtime/: __init__.py  adr_ratification.py  boot_log.py  boot_trap_bundle_manifest.py  capability_trap_fuzz.py  capability_traps.py  channel_telemetry.py  channel_trace.py  hardware_target.py  host_preflight.py  host_prep_note.py  kernel_boot_handoff.py  kernel_pgvm2_loader_evidence.py  kernel_pgvm2_loader_output.py  lab_guest_autostart.py  lab_kernel_transcript_export_receipt.py  lab_manifest.py  lab_readiness.py  microkernel_isolation.py  n0_owner_decision_packet.py  n0_owner_response.py  native_binary.py  native_boot_artifact.py  native_boot_config.py  native_boot_exit.py  native_boot_handoff.py  native_boot_trust.py  native_elf_loader.py  native_firmware.py  native_initial_system.py  native_inner_live.py  native_kernel_cpu_policy.py  native_kernel_entry.py  native_kernel_errata_policy.py  native_kernel_image.py  native_kernel_load.py  native_kernel_map.py  native_kernel_physical_memory.py  native_kernel_privilege_msr_policy.py  native_kernel_revalidation.py  (+57 more)
security/: README.md  owner-adr-signers.allowed  revoked-adr-signers
specs/: adr-ratification-manifest.schema.json  adr-ratification-policy.json  adr-ratification-policy.schema.json  adr-ratification-readiness.schema.json  adr-ratification-receipt.schema.json  boot-log.schema.json  (+198 more)
(+263 files in other folders)
