[workspace]
members = [
  "artifact",
  "boot",
  "bootexit",
  "bootload",
  "bootcfg",
  "elf",
  "firmware",
  "fixtures/pooleboot",
  "fixtures/poolekernel",
  "handoff",
  "inner",
  "initsys",
  "kernel",
  "kmap",
  "livehandoff",
  "manifest",
  "microcode",
  "policy",
  "recovery",
  "symbols",
  "trust",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license-file = "../LICENSE"
publish = false

[profile.release]
codegen-units = 1
debug = 0
incremental = false
lto = false
opt-level = "s"
overflow-checks = true
panic = "abort"
strip = "symbols"
