[package]
name = "pooleboot"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[lib]
name = "pooleboot"
path = "src/lib.rs"

[[bin]]
name = "PooleBoot"
path = "src/main.rs"

[dependencies]
poole-boot-exit = { path = "../bootexit" }
poole-bootload = { path = "../bootload" }
poole-boot-config = { path = "../bootcfg" }
poole-elf = { path = "../elf" }
poole-handoff = { path = "../handoff" }
poole-kmap = { path = "../kmap" }
poole-live-handoff = { path = "../livehandoff" }
