[package]
name = "pooleboot"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[features]
default = []
development-transfer = []

[lib]
name = "pooleboot"
path = "src/lib.rs"

[[bin]]
name = "PooleBoot"
path = "src/main.rs"

[dependencies]
poole-boot-exit = { path = "../bootexit" }
poole-bootload = { path = "../bootload" }
poole-boot-config = { path = "../bootcfg" }
poole-boot-trust = { path = "../trust" }
poole-elf = { path = "../elf" }
poole-handoff = { path = "../handoff" }
poole-inner-live = { path = "../inner" }
poole-kmap = { path = "../kmap" }
poole-live-handoff = { path = "../livehandoff" }
