[package]
name = "poole-bootload"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
poole-boot-artifact = { path = "../artifact" }
poole-boot-config = { path = "../bootcfg" }
poole-elf = { path = "../elf" }
poole-manifest = { path = "../manifest" }
