[package]
name = "poole-policy"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[features]
default = []
host-probe = []

[[bin]]
name = "ppol1-probe"
path = "src/bin/ppol1_probe.rs"
required-features = ["host-probe"]

[dependencies]
poole-initial-system = { path = "../initsys" }
sha2 = { version = "=0.11.0", default-features = false }
