[package]
name = "poole-boot-trust"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[features]
default = []
host-probe = []

[[bin]]
name = "pbtrust1-probe"
path = "src/bin/pbtrust1_probe.rs"
required-features = ["host-probe"]

[dependencies]
sha2 = { version = "=0.11.0", default-features = false }
